# advanced-programmings-at3

./: CMakeLists.txt  ProgramWindow.cpp  ProgramWindow.h  README.md  main.cpp
exceptions/: NotFoundException.cpp  NotFoundException.h
net/: Client.cpp  Client.h  Server.cpp  Server.h
net/exceptions/: GeneralNetError.h  ListenError.h  SocketError.h
routing/: Route.h  RouteManager.cpp  RouteManager.h  Router.cpp  Router.h
user-interface/template/: main.glade
views/: ClientInterfaceView.cpp  ClientInterfaceView.h  ConnectToServerView.cpp  ConnectToServerView.h  HomeView.cpp  HomeView.h  MainView.cpp  MainView.h  MainWindow.cpp  MainWindow.h  ProgramWindow.cpp  ProgramWindow.h  ServerInterfaceView.cpp  ServerInterfaceView.h
views/template/: chat-template.glade
